# turtletranslate

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
test/: test.py
test/docs/: index.md  index_en.md  index_es.md
turtletranslate/: __init__.py  exceptions.py  file_handler.py  logger.py  parameters.py  tokens.py  translate.py  utils.py  validator.py
turtletranslate/models/: __init__.py  frontmatter.py  summary.py  translation.py
